# fuko-pr

./: .coverage  .dockerignore  .env.example  .fuko.toml  .fuko.toml.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  runner-setup.md
.claude/: project.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  fuko-pr-review.yml  pr-agent-image.yml
docker/: Dockerfile.sidecar  runner-compose.yml
docs/: deployment.md  design.md  review-signal-v1.md
migrations/: 001_init.sql  002_provider_cooldown.sql
scripts/: signals_coverage.py
sidecar/: __init__.py  circuit_breaker.py  cli.py  commands.py  config.py  db.py  embed.py  fukoconfig.py  ingest.py  kbcli.py  main.py  models.py  normalizers.py  objectstore.py  pool.py  presets.py  retrieve.py  runner.py  signals.py  sizing.py  sqlite_store.py  status.py  stores.py  threads.py  throttle.py
tests/: test_cb_endpoints.py  test_chunking.py  test_commands.py  test_config_validation.py  test_embed.py  test_failover.py  test_ingress.py  test_integration.py  test_kbcli.py  test_learnings_endpoint.py  test_normalizers.py  test_objectstore.py  test_pool.py  test_pure.py  test_runner.py  test_signals.py  test_sizing.py  test_sqlite_store.py  test_startup.py  test_status.py  test_stores.py  test_threads.py  test_throttle.py
workflows/: ingest-comment.yml  pr-command.yml  pr-review.yml  sweep-threads.yml
(+3 files in other folders)
