[project]
name = "fuko-pr"
version = "0.4.0"
description = "A vendor-neutral layer over PR review bots, with a knowledge base you own"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "fuko-pr contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]
# Server-free knowledge store: a sqlite-vec file synced to S3/R2 object storage.
sqlite = ["sqlite-vec>=0.1.6", "boto3>=1.34"]

[project.scripts]
fuko = "sidecar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = ["D203", "D211", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
addopts = "--cov=sidecar --cov-report=term-missing"

[tool.coverage.run]
source = ["sidecar"]

[tool.coverage.report]
fail_under = 80
show_missing = true
